<resources>
    <string name="app_name">Orders</string>
    <string name="type_product_name">Type product name</string>
    <string name="type_price_product">Type price of product</string>
    <string name="type_stock_product">Type stock product</string>
    <string name="add_product">Add product</string>
    <string name="save_product">Save Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="product_stock">Product Stock</string>
    <string name="title">Title</string>
    <string name="desccription">Description</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="save_app">Save App</string>
</resources>
