<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_product"
    android:layout_marginTop="@dimen/margin_top"
    android:background="@android:color/holo_blue_dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:background="@android:color/holo_green_dark">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_edit_product"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/holo_blue_bright" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_delete_product"
            android:src="@android:drawable/ic_menu_delete"
            android:background="@android:color/holo_red_dark"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_product_name"
            android:textSize="@dimen/tv_size_name_product"
        android:text="@string/product_name"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/iv_product" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_product_price"
            android:textSize="@dimen/tv_size_product_price"
            android:text="@string/price"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignBaseline="@+id/tv_product_stock"
            android:layout_alignBottom="@+id/tv_product_stock"
            android:layout_toRightOf="@+id/iv_product"
            android:layout_toEndOf="@+id/iv_product"
            android:layout_marginLeft="@dimen/margin_tv"
            android:layout_marginStart="@dimen/margin_tv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_product_stock"
            android:textSize="@dimen/tv_size_product_stock"
            android:text="@string/product_stock"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginRight="@dimen/margin_tv_right"
            android:layout_marginEnd="@dimen/margin_tv_end"
            android:layout_below="@+id/tv_product_name"
            android:layout_toLeftOf="@+id/bt_delete_product"
            android:layout_toStartOf="@+id/bt_delete_product" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="@dimen/iv_width"
            android:layout_height="@dimen/iv_height"
            android:id="@+id/iv_product"
            android:src="@drawable/androidan"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/margin_gif_left"
            android:layout_marginStart="@dimen/margin_gif_Start" />

    </RelativeLayout>

</android.support.v7.widget.CardView>